force-app/main/default/objects/Procurement_Status__c.object
<CustomObject>
    <fields>
        <fullName>Actual_CBE__c</fullName>
        <label>Actual CBE</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Actual_DTS__c</fullName>
        <label>Actual DTS</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Actual_PO__c</fullName>
        <label>Actual PO</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Actual_RFQ__c</fullName>
        <label>Actual RFQ</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Actual_RQ__c</fullName>
        <label>Actual RQ</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Actual_TBE__c</fullName>
        <label>Actual TBE</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Actual__c</fullName>
        <label>%Actual</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Discipline__c</fullName>
        <label>Discipline</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Discipline</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>PO_Number__c</fullName>
        <label>PO Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Plan_CBE__c</fullName>
        <label>Plan CBE</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Plan_DTS__c</fullName>
        <label>Plan DTS</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Plan_PO__c</fullName>
        <label>Plan PO</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Plan_RFQ__c</fullName>
        <label>Plan RFQ</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Plan_RQ__c</fullName>
        <label>Plan RQ</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Plan_TBE__c</fullName>
        <label>Plan TBE</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Plan__c</fullName>
        <label>%Plan</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Project_Procurement_Contract_Mgmt__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project Procurement / Contract Mgmt</label>
        <referenceTo>Project_Procurement_Contract_Mgmt__c</referenceTo>
        <relationshipLabel>Procurement Status</relationshipLabel>
        <relationshipName>Procurement_Status</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vendor__c</fullName>
        <label>Vendor</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Procurement Status</label>
    <nameField>
        <label>Package Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Check_Percent_Actual</fullName>
        <active>true</active>
        <errorConditionFormula>Actual__c &gt; 100</errorConditionFormula>
        <errorDisplayField>Actual__c</errorDisplayField>
        <errorMessage>%Actual should not greater than 100</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Check_Percent_Plan</fullName>
        <active>true</active>
        <errorConditionFormula>Plan__c &gt; 100</errorConditionFormula>
        <errorDisplayField>Plan__c</errorDisplayField>
        <errorMessage>%Plan should not greater than 100</errorMessage>
    </validationRules>
</CustomObject>